fixed dark mode and create side menu

--- a/css/explorer.css
+++ b/css/explorer.css
@@ -45,25 +45,3 @@
   grid-row: auto/span 2;
 }
 
-footer {
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  position: sticky;
-  display: flex;
-  bottom: 0;
-  left: 0;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 15px;
-  padding-bottom: 15px;
-  border-top: 1px solid #eee;
-  background-color: var(--bg-color);
-}
-footer .profile-container {
-  width: 35px;
-  height: 35px;
-}
-footer .profile-container img{
-  border: 0.1rem solid white;
-}
