--- a/css/home.css
+++ b/css/home.css
@@ -186,26 +186,3 @@ main .posts-container .post-item .post-footer .discription > p > span {
   font-weight: bold;
 }
 
-footer {
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  position: sticky;
-  display: flex;
-  bottom: 0;
-  left: 0;
-  align-items: center;
-  justify-content: space-between;
-  background-color: var(--bg-color);
-  padding: 0 15px;
-  padding-bottom: 15px;
-  border-top: 1px solid #eee;
-}
-
-footer .profile-container {
-  width: 35px;
-  height: 35px;
-}
-footer .profile-container img{
-  border: 0.1rem solid white;
-}
