--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 body {
   font-size: 12px;
   font-family: sans-serif;
-  max-width: 425px;
+  max-width: 425px ;
   margin: 0 auto;
   background-color: var(--bg-color);
 }
@@ -40,4 +40,28 @@ a {
 i {
   font-size: 2em;
   cursor: pointer;
+}
+
+footer {
+  height: 60px;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 15px;
+  padding-bottom: 15px;
+  border-top: 1px solid #eee;
+  background-color: var(--bg-color);
+}
+
+footer .profile-container {
+  width: 35px;
+  height: 35px;
+}
+footer .profile-container img{
+  border: 0.1rem solid white;
 }
